# jemdoc-cvx

./: .gitignore  Makefile  README.md  contact.html  contact.jemdoc  download.html  example.html  extra.html  htmlchanges.html  index.html  jemdoc  latex.html  latex.jemdoc  menu.html  menu.jemdoc  modelines.html  modelines.jemdoc  package.json  pyproject.toml  revision.html  stuff.html  syntax.html  syntax.jemdoc  tables.html  using.html  using.jemdoc
.github/workflows/: ci.yml  docs.yml  release.yml
css/: example.css  exp.css  green.css  jacob.css  jemdoc.css  white.css
example/: mysite.conf
scripts/: bump_version.py
tests/: test_render.py
tests/fixtures/example/: link.html  mathjax.html  underscore.html
tests/fixtures/www/: cheatsheet.html  contact.html  download.html  example.html  extra.html  htmlchanges.html  index.html  latex.html  menu.html  modelines.html  revision.html  stuff.html  syntax.html  tables.html  using.html
www/: MENU  Makefile  contact.jemdoc  download.jemdoc  example.jemdoc  exampleIN.jemdoc  htmlchanges.jemdoc  index.jemdoc  jemdoc.conf  latex.jemdoc  procexample.py  revision.jemdoc  using.jemdoc
